--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,31 +1,31 @@
 <div class="col">
   <ul>
     <li class="list-topic">Product</li>
-    <li><a href="https://www.magnolia-cms.com/get-started/developer-trial.html" target="_blank" rel="noopener">Developer Trial</a></li>
+    <li><a href="https://www.magnolia-cms.com/get-started/developer-trial.html" target="_blank" rel="noreferrer, noopener">Developer Trial</a></li>
     <li><a href="https://docs.magnolia-cms.com/incubator-modules/index.html">Incubator Modules</a></li>
-    <li><a href="https://marketplace.magnolia-cms.com/" target="_blank">Magnolia Marketplace</a></li>
-    <li><a href="http://mgnl.io/roadmap" target="_blank" >Product Roadmap</a></li>
-    <li><a href="https://github.com/magnolia-cms" target="_blank" >GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
+    <li><a href="https://marketplace.magnolia-cms.com/" target="_blank" rel="noreferrer, noopener">Magnolia Marketplace</a></li>
+    <li><a href="http://mgnl.io/roadmap" target="_blank" rel="noreferrer, noopener">Product Roadmap</a></li>
+    <li><a href="https://github.com/magnolia-cms" target="_blank" rel="noreferrer, noopener">GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
   </ul>
 </div>
 <div class="col">
   <ul>
     <li class="list-topic">Services</li>
-    <li><a href="https://www.magnolia-cms.com/services.html" target="_blank" rel="noopener">Professional Services</a></li>
-    <li><a href="https://www.magnolia-cms.com/services/education/academy.html" target="_blank" rel="noopener">Magnolia Academy</a></li>
-    <li><a href="https://www.magnolia-cms.com/services/education/training.html" target="_blank" >Training</a></li>
-    <li><a href="https://www.magnolia-cms.com/partners.html" target="_blank" >Partner Program</a></li>
-    <li><a href="https://www.magnolia-cms.com/support.html" target="_blank" rel="noopener">Support</a></li>
+    <li><a href="https://www.magnolia-cms.com/services.html" target="_blank" rel="noreferrer, noopener">Professional Services</a></li>
+    <li><a href="https://www.magnolia-cms.com/services/education/academy.html" target="_blank" rel="noreferrer, noopener">Magnolia Academy</a></li>
+    <li><a href="https://www.magnolia-cms.com/services/education/training.html" target="_blank" rel="noreferrer, noopener" >Training</a></li>
+    <li><a href="https://www.magnolia-cms.com/partners.html" target="_blank" rel="noreferrer, noopener">Partner Program</a></li>
+    <li><a href="https://www.magnolia-cms.com/support.html" target="_blank" rel="noreferrer, noopener">Support</a></li>
   </ul>
 </div>
 <div class="col">
   <ul>
     <li class="list-topic">Resources</li>
-    <li><a href="https://www.magnolia-cms.com/library.html" target="_blank" >Magnolia Resources</a></li>
-    <li><a href="https://www.magnolia-cms.com/blog.html" target="_blank" >Magnolia Blog</a></li>
-    <li><a href="https://www.magnolia-cms.com/library/videos.html" target="_blank" >Magnolia Videos</a></li>
-    <li><a href="https://www.magnolia-cms.com/email/newsletter.html" target="_blank" >Newsletter</a></li>
-    <li><a href="https://www.magnolia-cms.com/about/careers.html" target="_blank" >Careers - Join us!</a></li>
+    <li><a href="https://www.magnolia-cms.com/library.html" target="_blank" rel="noreferrer, noopener">Magnolia Resources</a></li>
+    <li><a href="https://www.magnolia-cms.com/blog.html" target="_blank" rel="noreferrer, noopener">Magnolia Blog</a></li>
+    <li><a href="https://www.magnolia-cms.com/library/videos.html" target="_blank" rel="noreferrer, noopener">Magnolia Videos</a></li>
+    <li><a href="https://www.magnolia-cms.com/email/newsletter.html" target="_blank" rel="noreferrer, noopener">Newsletter</a></li>
+    <li><a href="https://www.magnolia-cms.com/about/careers.html" target="_blank" rel="noreferrer, noopener">Careers - Join us!</a></li>
 
   </ul>
 </div>
@@ -33,19 +33,19 @@
 {{#if (eq page.layout 'home-saas')}}
 <div class="footer-terms">
   <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
-  <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank">Privacy policy</a>
+  <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank" rel="noreferrer, noopener">Privacy policy</a>
   <a href="#top" title="Scroll to top"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i></a>
 </div>
 {{else}}
 <div class="footer-terms">
   <p>Love Magnolia? Review us and get a reward!</p>
-  <a href="https://mgnl.io/magnolia-customer-reviews" target="_blank"><button>Customers <i class="fa fa-star" aria-hidden="true"></i> </button></a>
-  <a href="https://mgnl.io/magnolia-partner-reviews" target="_blank"><button>Partners <i class="fa fa-star" aria-hidden="true"></i> </button></a>
+  <a href="https://mgnl.io/magnolia-customer-reviews" target="_blank" rel="noreferrer, noopener"><button>Customers <i class="fa fa-star" aria-hidden="true"></i> </button></a>
+  <a href="https://mgnl.io/magnolia-partner-reviews" target="_blank" rel="noreferrer, noopener"><button>Partners <i class="fa fa-star" aria-hidden="true"></i> </button></a>
   <br>
   <br>
   <hr>
   <br>
   <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
-  <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank">Privacy policy</a>
+  <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank" rel="noreferrer, noopener">Privacy policy</a>
 </div>
 {{/if}}
