--- a/src/partials/footer-socials.hbs
+++ b/src/partials/footer-socials.hbs
@@ -1,20 +1,20 @@
 <ul class="social-icons">
   <li class="facebook">
-    <a href="https://www.facebook.com/Magnolia" target="_blank" class="icon">
+    <a href="https://www.facebook.com/Magnolia" target="_blank" rel="noreferrer, noopener" class="icon">
       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"/></svg>
     </a>
   </li>
   <li class="twitter">
-    <a href="https://twitter.com/magnolia_cms" target="_blank" class="icon">
+    <a href="https://twitter.com/magnolia_cms" target="_blank" rel="noreferrer, noopener" class="icon">
       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
   </li>
   <li class="linkedin">
-    <a href="https://www.linkedin.com/company/magnolia-cms" target="_blank" class="icon">
+    <a href="https://www.linkedin.com/company/magnolia-cms" target="_blank" rel="noreferrer, noopener" class="icon">
       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
     </a>
   </li>
   <li class="youtube">
-    <a href="https://www.youtube.com/channel/UCKq5WUu8lM799JNKmu49jZA" target="_blank" class="icon">
+    <a href="https://www.youtube.com/channel/UCKq5WUu8lM799JNKmu49jZA" target="_blank" rel="noreferrer, noopener" class="icon">
       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
     </a>
   </li>
