update quoteblock border to latest design

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -152,7 +152,7 @@
   --pre-border-color: var(--panel-border-color);
   --pre-annotation-font-color: var(--color-white);
   --quote-background: var(--panel-background);
-  --quote-border-color: var(--color-primary-gold);
+  --quote-border-color: var(--rebrand-color-primary-teal);
   --quote-font-color: var(--color-gray-70);
   --quote-attribution-font-color: var(--color-gray-30);
   --sidebar-background: var(--color-smoke-90);
