--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -495,7 +495,7 @@
               <h3 class="card-x__title h3"><i class="fa fa-code" aria-hidden="true"></i> Developers</h3>
               <p class="card-x__p">Get to know the technical setup for Magnolia. Get started with tutorials, learn how to create your own modules for Magnolia, or try out our APIs. In the Developers section, you find the set of tools required for development.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/6.3/developing/">Learn more</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/developing/">Learn more</a>
               </div>
             </div>
           </div>
@@ -505,17 +505,17 @@
               <h3 class="card-x__title h3"><i class="fa fa-pencil" aria-hidden="true"></i> Authors</h3>
               <p class="card-x__p">Focus on using Magnolia by getting to know Admincentral. Get acquainted with editing pages, managing assets, and publishing your updates.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/6.3/authoring/">Learn more</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/authoring/">Learn more</a>
               </div>
             </div>
           </div>
 
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
-              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Magnolia PaaS</h3>
-              <p class="card-x__p">Magnolia Platform as a Service (PaaS) typically supports the most recent versions of Magnolia branches as well as bringing in additional cloud-specific features. Manage it all directly from your dedicated PaaS cockpit.</p>
+              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Administrators</h3>
+              <p class="card-x__p">Digital experience administrators make key decisions on setup, user management, technical requirements, and security while guiding developers and monitoring overall user experience.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="{{{siteRootPath}}}/paas/">Learn more</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/administration/">Learn more</a>
               </div>
             </div>
           </div>
