dx cloud on home page

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -406,12 +406,12 @@
     <div class="navbar-menu">
 
       <div class="navbar-end">
-        <a class="navbar-item" href="{{{siteRootPath}}}/product-docs/6.3/releases/">
-          DX Core Releases
+        <a class="navbar-item" href="{{{siteRootPath}}}/product-docs/">
+          DX Core
         </a>
 
         <a class="navbar-item" href="{{{siteRootPath}}}/paas/">
-          PaaS
+          DX Cloud
         </a>
 
         {{!-- <a class="navbar-item" href="https://www.magnolia-cms.com/get-started/demo.html" target="_blank">
