dx cloud other ui pages

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -72,7 +72,7 @@
       <div class="navbar-end">
         <a href="{{{siteRootPath}}}/headless/" class="navbar-item headless">Headless docs</a>
         <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item headless">DX Core</a>
-        <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-trials.com" target="_blank">Magnolia Trials</a>
@@ -117,7 +117,7 @@
       <div class="navbar-end">
         <a href="https://ha.magnolia-cms.com/" class="navbar-item headless" target="_blank">Headless Accelerator <i class="fa fa-external-link" aria-hidden="true" style="padding-left: 3px;"></i></a>
         <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item headless">DX Core</a>
-        <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -301,7 +301,7 @@
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/platform/architecture-and-tech-stack/platform-as-a-service.html" target="_blank">Get PaaS</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/platform/architecture-and-tech-stack/platform-as-a-service.html" target="_blank">Get DX Cloud</a>
           </span>
         </div>
       </div>
@@ -358,7 +358,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -420,7 +420,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.2/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -481,7 +481,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -542,7 +542,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -600,7 +600,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -658,7 +658,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
