DOCU-3764 accessibility statement

--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -46,6 +46,9 @@
   <hr>
   <br>
   <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
-  <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank" rel="noreferrer, noopener">Privacy policy</a>
+    <p>
+        <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller; margin-right: 1vw;" aria-label="Read Magnolia's official Privacy Policy">Privacy policy</a>
+        <a href="https://www.magnolia-cms.com/legal/accessiblity-statement.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller;" aria-label="Read Magnolia's official Accessibility Statement">Accessibility statement</a>
+    </p>
 </div>
 {{/if}}
