adjust vh for access and ppolicy for home page; was squashed

--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -46,7 +46,7 @@
   <hr>
   <br>
   <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
-    <p>
+    <p style="margin-top: 1.25vh;">
         <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller; margin-right: 1vw;" aria-label="Read Magnolia's official Privacy Policy">Privacy policy</a>
         <a href="https://www.magnolia-cms.com/legal/accessiblity-statement.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller;" aria-label="Read Magnolia's official Accessibility Statement">Accessibility statement</a>
     </p>
