hr on home page footer

--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -43,7 +43,7 @@
   <a href="https://mgnl.io/magnolia-partner-reviews" target="_blank" rel="noreferrer, noopener"><button>Partners <i class="fa fa-star" aria-hidden="true"></i> </button></a>
   <br>
   <br>
-  <hr>
+  <hr style="background-color: whitesmoke !important;">
   <br>
   <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
     <p style="margin-top: 1.25vh;">
