--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -303,6 +303,7 @@
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/platform/architecture-and-tech-stack/platform-as-a-service.html" target="_blank">Get DX Cloud</a>
           </span>
+          <button id="themeToggle" onClick="toggleTheme()"><i class="fa fa-moon-o" aria-hidden="true"></i></button>
         </div>
       </div>
     </div>
@@ -363,6 +364,7 @@
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
+          <button id="themeToggle" onClick="toggleTheme()"><i class="fa fa-moon-o" aria-hidden="true"></i></button>
         </div>
       </div>
     </div>
