--- a/src/css/page-versions.css
+++ b/src/css/page-versions.css
@@ -4,7 +4,7 @@
   margin-left: 0.4rem;
   position: relative;
   line-height: 1;
-  background-color: var(--rebrand-color-primary-sand);
+  background-color: var(--page-version-background);
   border-radius: 5px;
   transition: 0.5s ease;
   font-weight: bolder;
@@ -19,10 +19,10 @@
 
 .page-versions .version-menu-toggle {
   color: inherit;
-  background: url(../img/chevron.svg) no-repeat;
+  background: url(../img/chevron-green.svg) no-repeat;
   background-position: right 0.5rem top 50%;
   background-size: auto 0.75em;
-  border: none;
+  border: 1px solid var(--page-version-border);
   outline: none;
   line-height: inherit;
   padding: 0.5rem 1.5rem 0.5rem 0.5rem;
@@ -32,9 +32,14 @@
   min-width: 4vw;
 }
 
+.page-versions.is-active .version-menu-toggle {
+  border: none !important;
+  transition: 0.3s ease;
+}
+
 .page-versions .version-menu {
   border: 1px solid transparent;
-  background-color: var(--rebrand-color-primary-sand);
+  background-color: var(--page-version-background);
   padding: 1.25rem 0.5rem 0.5rem;
   position: absolute;
   top: 0;
