--- a/src/css/pagination.css
+++ b/src/css/pagination.css
@@ -56,6 +56,7 @@ nav.pagination a {
   font-weight: var(--body-font-weight-bold);
   line-height: 1.3;
   position: relative;
+  color: var(--toolbar-muted-color);
 }
 
 nav.pagination a::before,
